--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
 1) simpleaudio:
 pip install -U --force git+https://github.com/cexen/py-simple-audio.git
+
+2) pyinstaller (for installation):
+pip install pyinstaller
